src/objects/Red_Form_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Email_Part_1__c</fullName>
        <label>First Email Part 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Email_Part_2__c</fullName>
        <label>First Email Part 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Email_Part_3__c</fullName>
        <label>First Email Part 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Global_Email_Address__c</fullName>
        <label>Global Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Global_Email_Part_1__c</fullName>
        <label>Global Email Part 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Global_Email_Part_2__c</fullName>
        <label>Global Email Part 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quarter_Email_Part_1__c</fullName>
        <label>Quarter Email Part 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quarter_Email_Part_2__c</fullName>
        <label>Quarter Email Part 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quarter_Email_Part_3__c</fullName>
        <label>Quarter Email Part 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remainder_Email_Part_1__c</fullName>
        <label>Remainder Email Part 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remainder_Email_Part_2__c</fullName>
        <label>Remainder Email Part 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remainder_Email_Part_3__c</fullName>
        <label>Remainder Email Part 3</label>
        <type>TextArea</type>
    </fields>
    <label>Red Form Settings</label>
</CustomObject>